--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "JAP-BONG 아빠가 만든 가족 일본어 앱",
-  "short_name": "JAP-BONG",
+  "name": "JAPRO - Premium Japanese Adventure",
+  "short_name": "JAPRO",
   "description": "가족과 함께하는 재미있는 일본어 학습 앱",
   "start_url": "./index.html",
   "scope": "./",
